# qt-qclaude-plugin

./: .gitignore  CMakeLists.txt  LICENSE  QClaude.json.in  README.md
.github/: dependabot.yml
.github/linters/: .markdown-lint.yml
.github/workflows/: build.yml  codeql.yml  linter.yml
helpers/: qclaude_hook_bridge.cpp  qclaude_mcp_permission.cpp
resources/: qclaude.qrc
src/: claudeprocess.cpp  claudeprocess.h  qclaude_compat.h  qclaudeautocomplete.cpp  qclaudeautocomplete.h  qclaudeconstants.h  qclaudediff.cpp  qclaudediff.h  qclaudefilepicker.cpp  qclaudefilepicker.h  qclaudehookserver.cpp  qclaudehookserver.h  qclaudepanel.cpp  qclaudepanel.h  qclaudeplugin.cpp  qclaudesettings.cpp  qclaudesettings.h  qclaudetr.h
